@@ -2,7 +2,7 @@
 /***************************************************************
 *  Copyright notice
 *
-*  (c) 2007-2014 Stanislas Rolland <typo3(arobas)sjbr.ca>
+*  (c) 2007-2015 Stanislas Rolland <typo3(arobas)sjbr.ca>
 *  All rights reserved
 *
 *  This script is part of the Typo3 project. The Typo3 project is
@@ -1886,14 +1886,6 @@ class tx_srfeuserregister_data {
 										$dateArray['d'],
 										$dateArray['y']
 									);
-
-								// Consider time zone offset
-								// This is necessary if the server wants to have the date not in GMT,
-								// so the offset must be added first to compensate for this
-								// it stands to reason to execute it all the time
-								if (!empty($GLOBALS['TYPO3_CONF_VARS']['SYS']['serverTimeZone'])) {
-									$parsedArray[$theField] += ($GLOBALS['TYPO3_CONF_VARS']['SYS']['serverTimeZone'] * 3600);
-								}
 							}
 							break;
 						case 'deleteUnreferencedFiles':
